--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,11 @@ android {
     }
 
     buildTypes {
+        staging {
+            applicationIdSuffix ".staging"
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
